completed assignment one 01

--- a/Furniro/signle-product.html
+++ b/Furniro/signle-product.html
@@ -40,7 +40,7 @@
             </nav>
             <div class="icon">
                 <ul>
-                    <li><i class="fa-regular fa-user"></i></i></li>
+                    <li><i class="fa-regular fa-user"></i></li>
                     <li><i class="fa-solid fa-magnifying-glass"></i></li>
                     <li><i class="fa-regular fa-heart"></i></li>
                     <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
@@ -59,7 +59,7 @@
             <span class="symbol">></span>
             <span class="gray-color">Shop</span>
             <span class="symbol">></span>
-            <span class="gray-color" class="symbol">|</span>
+            <span class="gray-color symbol">|</span>
             <span>Asgaard sofa</span>
         </div>
     </section>
