--- a/Furniro/blog.html
+++ b/Furniro/blog.html
@@ -25,7 +25,7 @@
     <header>
         <div class="container">
             <div class="cart-icon">
-                <li><a target="_blank" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <i class="fa-solid fa-bars"></i>
             </div>
             <div class="logo">
                 <img src="img/logo.png" alt="Furniro logo">
@@ -40,7 +40,7 @@
             </nav>
             <div class="icon">
                 <ul>
-                    <li><i class="fa-regular fa-user"></i></i></li>
+                    <li><i class="fa-regular fa-user"></i></li>
                     <li><i class="fa-solid fa-magnifying-glass"></i></li>
                     <li><i class="fa-regular fa-heart"></i></li>
                     <li><a target="_blank" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
@@ -73,7 +73,7 @@
                     <div class="blog-date">
                         <p><i class="fa-solid fa-user-tie"></i> Admin</p>
                         <p><i class="fa-solid fa-calendar"></i> 14 Oct 2022</p>
-                        <p><img src="img/Vector.png"> Wood</p>
+                        <p><img src="img/Vector.png" alt="icon-image"> Wood</p>
                     </div>
                     <div class="blog-text">
                         <h3>Going all-in with millennial design</h3>
@@ -96,7 +96,7 @@
                     <div class="blog-date">
                         <p><i class="fa-solid fa-user-tie"></i> Admin</p>
                         <p><i class="fa-solid fa-calendar"></i> 14 Oct 2022</p>
-                        <p><img src="img/Vector.png"> Handmade</p>
+                        <p><img src="img/Vector.png" alt="icon-image"> Handmade</p>
                     </div>
                     <div class="blog-text">
                         <h3>Exploring new ways of decorating</h3>
@@ -119,7 +119,7 @@
                     <div class="blog-date">
                         <p><i class="fa-solid fa-user-tie"></i> Admin</p>
                         <p><i class="fa-solid fa-calendar"></i> 14 Oct 2022</p>
-                        <p><img src="img/Vector.png"> Wood</p>
+                        <p><img src="img/Vector.png" alt="icon-image"> Wood</p>
                     </div>
                     <div class="blog-text">
                         <h3>Handmade pieces that took time to make</h3>
