--- a/Furniro/cart.html
+++ b/Furniro/cart.html
@@ -40,7 +40,7 @@
             </nav>
             <div class="icon">
                 <ul>
-                    <li><i class="fa-regular fa-user"></i></i></li>
+                    <li><i class="fa-regular fa-user"></i></li>
                     <li><i class="fa-solid fa-magnifying-glass"></i></li>
                     <li><i class="fa-regular fa-heart"></i></li>
                     <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
