--- a/Furniro/checkout.html
+++ b/Furniro/checkout.html
@@ -40,7 +40,7 @@
             </nav>
             <div class="icon">
                 <ul>
-                    <li><i class="fa-regular fa-user"></i></i></li>
+                    <li><i class="fa-regular fa-user"></i></li>
                     <li><i class="fa-solid fa-magnifying-glass"></i></li>
                     <li><i class="fa-regular fa-heart"></i></li>
                     <li><a target="_blank" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="company-name">
                         <label for="companyName">Company Name (Optional)</label> <br>
-                        <input type="text" name="company-name" id="company-name">
+                        <input type="text" name="companyName" id="companyName">
                     </div>
                     <div class="country">
                         <label for="country">Country / Region</label> <br>
