--- a/Furniro/shop.html
+++ b/Furniro/shop.html
@@ -40,7 +40,7 @@
             </nav>
             <div class="icon">
                 <ul>
-                    <li><i class="fa-regular fa-user"></i></i></li>
+                    <li><i class="fa-regular fa-user"></i></li>
                     <li><i class="fa-solid fa-magnifying-glass"></i></li>
                     <li><i class="fa-regular fa-heart"></i></li>
                     <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
@@ -68,6 +68,7 @@
     <!-- result section -->
     <section class="result-section">
         <div class="container">
+            <h3>Our Products</h3>
             <div class="result-left">
                 <div class="result-icon">
                     <img src="img/system-uicons_filtering.png" alt="banner image">
